# zeus

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/actions/: actiongen.h  baseaction.cpp  baseaction.h  createnullsinkact.cpp  createnullsinkact.h  createpipelineact.cpp  createpipelineact.h  createvirtualsinkact.cpp  createvirtualsinkact.h  destroypipelineact.cpp  destroypipelineact.h  destroyvirtualsinkact.cpp  destroyvirtualsinkact.h  moveplaybackstreamact.cpp  moveplaybackstreamact.h  movestreamact.cpp  movestreamact.h
src/core/: commandengine.cpp  commandengine.h  commandline.cpp  commandline.h  controller.cpp  controller.h  mainwindow.cpp  mainwindow.h  paction.cpp  paction.h  pulsedata.cpp  pulsedata.h  pulsequery.cpp  pulsequery.h  treesforactions.cpp  treesforactions.h  usercommand.cpp  usercommand.h  utils.cpp  utils.h  zeus.cpp
src/dialogs/: alldialogs.h  basedialog.cpp  basedialog.h  createpipelinedialog.cpp  createpipelinedialog.h  createvirtualsinkdialog.cpp  createvirtualsinkdialog.h  destroyvirtualsinkdialog.cpp  destroyvirtualsinkdialog.h  maybedialogfortype.cpp  maybedialogfortype.h  moveplaybackstreamdialog.cpp  moveplaybackstreamdialog.h  movestreamdialog.cpp  movestreamdialog.h
src/editors/: baseeditor.cpp  baseeditor.h  createnullsinkeditor.cpp  createnullsinkeditor.h  createpipelineeditor.cpp  createpipelineeditor.h  createvirtualsinkeditor.cpp  createvirtualsinkeditor.h  destroypipelineeditor.cpp  destroypipelineeditor.h  destroyvirtualsinkeditor.cpp  destroyvirtualsinkeditor.h  maybeeditorfortype.cpp  maybeeditorfortype.h  movestreameditor.cpp  movestreameditor.h
src/tabs/: actiontab.cpp  actiontab.h  commandtab.cpp  commandtab.h  playbacktab.cpp  playbacktab.h  recordtab.cpp  recordtab.h  streamtab.cpp  streamtab.h  tooltab.cpp  tooltab.h
src/tools/: propertywindow.cpp  propertywindow.h
src/views/: sinkinputview.cpp  sinkinputview.h  sourceoutputview.cpp  sourceoutputview.h  streamview.cpp  streamview.h
src/widgets/: basedevicecombobox.cpp  basedevicecombobox.h  basepropertygroupbox.cpp  basepropertygroupbox.h  basepulseitemcombobox.cpp  basepulseitemcombobox.h  devicecombobox.cpp  devicecombobox.h  elidinglabel.cpp  elidinglabel.h  kvpropertygroupbox.cpp  kvpropertygroupbox.h  pipelinesinkinputcombobox.cpp  pipelinesinkinputcombobox.h  propertygroupbox.cpp  propertygroupbox.h  propertykventry.cpp  propertykventry.h  querypreviewtree.cpp  querypreviewtree.h  querypropertygroupbox.cpp  querypropertygroupbox.h  virtualdevicecombobox.cpp  virtualdevicecombobox.h
