add_executable(
    zeus
        actions/baseaction.cpp
        actions/createnullsinkact.cpp
        actions/createpipelineact.cpp
        actions/createvirtualsinkact.cpp
        actions/destroypipelineact.cpp
        actions/destroyvirtualsinkact.cpp
        actions/movestreamact.cpp
        core/commandengine.cpp
        core/commandline.cpp
        core/controller.cpp
        core/mainwindow.cpp
        core/paction.cpp
        core/pulsedata.cpp
        core/pulsequery.cpp
        core/usercommand.cpp
        core/utils.cpp
        core/zeus.cpp
        editors/baseeditor.cpp
        editors/createnullsinkeditor.cpp
        editors/createpipelineeditor.cpp
        editors/createvirtualsinkeditor.cpp
        editors/destroypipelineeditor.cpp
        editors/destroyvirtualsinkeditor.cpp
        editors/maybeeditorfortype.cpp
        editors/movestreameditor.cpp
        tabs/actiontab.cpp
        tabs/commandtab.cpp
        tabs/streamtab.cpp
        tabs/tooltab.cpp
        tools/propertywindow.cpp
        views/streamview.cpp
        widgets/basepropertygroupbox.cpp
        widgets/basepulseitemcombobox.cpp
        widgets/devicecombobox.cpp
        widgets/kvpropertygroupbox.cpp
        widgets/pipelinesinkinputcombobox.cpp
        widgets/querypreviewtree.cpp
        widgets/querypropertygroupbox.cpp
        widgets/virtualdevicecombobox.cpp
)
target_include_directories(
    zeus
    PRIVATE
        ./
        ${GLIB_INCLUDE_DIRS}
        ${PULSE_INCLUDE_DIRS}
        ${MOCUIC_DIR}
)
set_target_properties(
    zeus
    PROPERTIES
        AUTOGEN_BUILD_DIR
            ${MOCUIC_DIR}
)
target_link_libraries(
    zeus
        Qt6::Widgets
        ${PULSE_LDFLAGS}
        ${GLIB_LDFLAGS}
)
install(
    TARGETS
        zeus
    DESTINATION
        bin
)
